--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -45,7 +45,7 @@ h3 {
     display: none;
     width: 100%;
     height: 100%;
-    top: 5.1em;
+    top: 5.8em;
     right: 0;
     left: 0;
     bottom: 0;
@@ -389,7 +389,7 @@ footer {
     .nav-links {
         position: fixed;
         flex-direction: column;
-        top: 4em;
+        top: 4.4em;
         background-color: var(--black);
         width: 120%;
         left: 0;
