--- a/styles.css/web-design.css
+++ b/styles.css/web-design.css
@@ -339,7 +339,7 @@ footer {
     .nav-links {
         position: fixed;
         flex-direction: column;
-        top: 4em;
+        top: 4.4em;
         background-color: var(--black);
         width: 120%;
         left: 0;
